apps/robot-shop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: robot-shop-ingress
  namespace: robot-shop

spec:
  ingressClassName: traefik

  rules:
    - host: robot-shop.falcoflow.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
